# ebook-wgpu-fundamentals

./: Cargo.toml  README.md
examples/ch01/: wgpu_info.rs
examples/ch02/: common.rs  line_msaa.rs  triangle_gpu_buffer.rs  triangle_gpu_buffer.wgsl  triangle_primitive.rs  triangle_primitive.wgsl  triangle_vertex_color.rs  triangle_vertex_color.wgsl
examples/ch03/: cube_rotation.rs  cube_wireframe.rs  cylinder_wireframe.rs  sphere_wireframe.rs  torus_wireframe.rs  unlit.wgsl  unlit_vertex_color.wgsl
src/: lib.rs  vertex_data.rs
